name:                bolt
version:             0.1.0.0
synopsis:            Bolt driver for Neo4j
description:         Please see README.md
homepage:            https://github.com/bflyblue/bolt#readme
license:             BSD3
license-file:        LICENSE
author:              Shaun Sharples
maintainer:          shaun.sharples@gmail.com
stability:           experimental
copyright:           (c) 2016 Shaun Sharples
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bolt.Exception
                     , Bolt.Protocol.Ver1
                     , Bolt.Protocol.Ver1.Message
                     , Bolt.Protocol.Ver1.Pretty
                     , Bolt.Protocol.Ver1.Request
                     , Bolt.Protocol.Ver1.Types
                     , Bolt.Transport
                     , Bolt.Transport.Chunked
                     , Bolt.Transport.Message
                     , Bolt.Transport.Socket
                     , Data.PackStream
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , bytestring
                     , cereal
                     , containers
                     , hashable
                     , network
                     , network-uri
                     , text
                     , unordered-containers
                     , vector
  ghc-options:         -Wall
  default-language:    Haskell2010

-- test-suite tests
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , bolt
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bflyblue/bolt
