cabal-version: 3.8
name: bolt
version: 0.3.2.0
synopsis: Bolt driver for Neo4j
description: A Bolt driver to access Neo4j databases using the Bolt Protocol. <https://boltprotocol.org/>
homepage: https://github.com/bflyblue/bolt#readme
license: BSD-3-Clause
license-file: LICENSE
author: Shaun Sharples
maintainer: shaun.sharples@gmail.com
stability: experimental
copyright: (c) 2025 Shaun Sharples
category: Database
build-type: Simple
extra-source-files: README.md

common common
  ghc-options: -Wall
  default-language: GHC2021

library
  import: common
  hs-source-dirs: lib
  other-extensions:
    DeriveAnyClass
    DeriveGeneric
    MultiWayIf
    OverloadedStrings
    RecordWildCards

  -- cabal-gild: discover lib/
  exposed-modules:
    Data.PackStream
    Database.Bolt.Exception
    Database.Bolt.Protocol.Ver1
    Database.Bolt.Protocol.Ver1.Graph
    Database.Bolt.Protocol.Ver1.Message
    Database.Bolt.Protocol.Ver1.Pretty
    Database.Bolt.Protocol.Ver1.Request
    Database.Bolt.Protocol.Ver1.Transaction
    Database.Bolt.Protocol.Ver1.Types
    Database.Bolt.Transport
    Database.Bolt.Transport.Chunked
    Database.Bolt.Transport.Message
    Database.Bolt.Transport.Socket
    Database.Bolt.Types

  build-depends:
    base >=4.8 && <5,
    bifunctors >=5.2 && <5.7,
    bytestring >=0.10.6 && <0.13,
    cereal >=0.5.4 && <0.6,
    containers >=0.5.6 && <0.8,
    hashable >=1.2.4 && <1.5,
    network >=2.6.2 && <3.3,
    network-uri >=2.6.1 && <2.7,
    scientific >=0.3.0 && <0.4,
    text >=1.2.2 && <1.3,
    transformers >=0.5.0 && <0.7,
    unordered-containers >=0.2.7 && <0.3,
    vector >=0.11.0 && <0.14,

test-suite test-bolt
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    base,
    bolt,
    bytestring >=0.10.6 && <0.13,
    cereal >=0.5.4 && <0.6,
    tasty,
    tasty-quickcheck,
    text >=1.2.2 && <1.3,
    unordered-containers >=0.2.7 && <0.3,
    vector >=0.11.0 && <0.14,

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

source-repository head
  type: git
  location: https://github.com/bflyblue/bolt
